<resources>
    <string name="app_name">Status Loading App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="button_text">Download</string>
    <string name="loading_text">Loading</string>
    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_text">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP Client for Android and Java by Square Inc.</string>
    <string name="download_image">download_illustrations</string>
    <string name="glide_title">Glide</string>
    <string name="glide_description">Image Loading Library by BumpTech</string>
    <string name="retrofit_title">Retrofit</string>
    <string name="retrofit_description">Type-safe HTTP Client for Android and Java by Square Inc.</string>
    <string name="loadapp_title">LoadApp</string>
    <string name="loadapp_description">Current Repository by Udacity</string>
    <string name="notification_channel_id">download_channel</string>
    <string name="notification_channel_name">Download</string>
    <string name="notification_description">Tap to see download status</string>
    <string name="file_name_text">File Name :</string>
    <string name="status_text">Status :</string>
    <string name="detail_button_text">OK</string>
</resources>
